# DeckCheatz

./: .envrc  .gitignore  .gitmodules  Cargo.lock.license  Cargo.toml  Cross.toml  cog.toml  deckcheatz.nix  default.nix  devenv.lock.license  devenv.nix  flake.lock.license  flake.nix  flathub.json
.github/: FUNDING.yml  dependabot.yml  mergify.yml
.github/workflows/: ci-debug-builds-linux.yml  ci-debug-builds.yml  ci-nightlies.yml  ci-nix-pm-tests.yml  ci-release-builds-linux.yml  ci-releases.yml  ci-tests-linux.yml  ci-tests-nix.yml  ci-tests.yml  clean-old-workflow-runs.yml  flatpak-update.yml  nix-push-to-cachix.yml  update-flatpak-cargo-file.yml  update-flatpak-cargo-lockfile.yml  verify-pr-commit.yml  verify-reuse-compliance.yml
build-aux/flatpak/: com.valvesoftware.Steam.CompatibilityTool.deckcheatz.metainfo.xml  com.valvesoftware.Steam.CompatibilityTool.deckcheatz.yml  flathub.json  flathub.json.license  generated-cargo-sources.json
build-aux/flatpak/steam/: toolmanifest.vdf
build-aux/nix/: checks.nix  deckcheatz-shim.nix  deckcheatz.nix  default.nix  formatter.nix
build-aux/steam/: toolmanifest.vdf.license
crates/deckcheatz/: Cargo.toml
crates/deckcheatz-shim/: Cargo.toml
crates/deckcheatz/src/: main.rs
script/: flatpak-cargo-generator.py
src/: .gitignore  main.rs
