# SPDX-FileCopyrightText: 2024 The DeckCheatz Developers
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "deckcheatz"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/DeckCheatz/DeckCheatz.git"
homepage = "https://DeckCheatz.github.io"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
keywords = ["game-trainers", "gaming", "proton", "wine", "wemod", "plitch"]
categories = ["games"]
description = "Portable, Flatpak-ready, game trainer interface for Steam Deck and other Linux systems."

[features]
default = ["wemod", "app-ui"]
plitch = ["proton-deps", "steam-deps"]
generic-trainer = ["proton-deps"]
app-ui = ["eframe"]
proton-deps = ["ge-man", "proton-call", "wincompatlib"]
steam-deps = ["steamid-ng", "steamlocate", "steamworks"]
wemod = ["proton-deps", "steam-deps"]
steamlocate = ["dep:steamlocate"]

[dependencies]
clap = { version = "4.5.38", features = ["env", "derive", "unicode", "string"] }
eframe = { version = "0.31.1", optional = true }
env_logger = "0.11.6"
log = "0.4.27"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }

ge-man = { version = "0.1.3", optional = true }
proton-call = { version = "3.1.2", optional = true }
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite"] }
steamid-ng = { version = "1.0.0", optional = true }
steamlocate = { version = "2.0.1", optional = true }
steamworks = { version = "0.11.0", features = ["serde"], optional = true }
wincompatlib = { version = "0.7.7", features = ["wine-proton", "wine-bundles", "wine-fonts", "winetricks"], optional = true }

openssl = { version = "0.10", features = ["vendored"] }
