# SPDX-FileCopyrightText: 2024-2026 The DeckCheatz Developers
#
# SPDX-License-Identifier: AGPL-3.0-only

[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/deckcheatz", "crates/deckcheatz-shim"]

[workspace.package]
name = "deckcheatz"
license = "AGPL-3.0-only"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/DeckCheatz/DeckCheatz.git"
homepage = "https://DeckCheatz.github.io"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
keywords = ["game-trainers", "gaming", "proton", "steam-deck"]
categories = ["games"]
description = "Portable, Flatpak-ready, game trainer interface for Steam Deck and other Linux systems."

[workspace.dependencies]
clap = { version = "4.5.57", features = ["env", "derive", "unicode", "string"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

sqlx = { version = "0.8.6", default-features = false, features = ["sqlite"] }
